# OMGL

./: CMakeLists.txt  README.md
data/: fragment.glsl
include/: Buffers.hpp  ClockDriver.hpp  Context.hpp  DisplayDriver.hpp  Endian.hpp  Exception.hpp  FileDriver.hpp  Font.hpp  GL.hpp  Model.hpp  Program.hpp  Shader.hpp  gl.hpp  omgl.hpp  shared.hpp
src/: Buffers.cpp  ClockDriver.cpp  FileDriver.cpp  Font.cpp  GL.cpp  Main.cpp  Program.cpp  Shader.cpp  gl.cpp  main.cpp  shared.cpp
src/win32/: ClockDriver.cpp  Context.cpp  DisplayDriver.cpp  FileDriver.cpp  GL.cpp  gl.cpp  windows.hpp
